--- a/Foodie-time.html
+++ b/Foodie-time.html
@@ -30,9 +30,9 @@
             <div class="head-list">
                 <nav>
 					<ul>
-						<a href="./Introduction.html">
-							<li>Introduction</li>
-						</a>
+                        <a href="./index.html">
+                            <li>Introduction</li>
+                        </a>
 						<a href="./Foodie-time.html">
 							<li>Foodie Time</li>
 						</a>
