--- a/Relax.html
+++ b/Relax.html
@@ -15,44 +15,48 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 	<script src="./JS/relax.js"></script>
 	<title>Pet's Paradise Pines</title>
-
+	<link rel="stylesheet" href="./CSS/header.css">
+    <script src="./JS/header.js" defer></script>
 
 </head>
 
 <body>
 
-	<div class="head">
-		<div class="head-top">
-			<div class="head-logo">
-				<img src="./assets/logo87.svg" alt="" width="154.5" height="80" />
-			</div>
-			<div class="head-list">
-				<nav>
-					<ul>
-                        <a href="./index.html">
-                            <li>Introduction</li>
-                        </a>
-						<a href="./Foodie-time.html">
-							<li>Foodie Time</li>
-						</a>
-						<a href="./Campaign.html">
-							<li>Campaign</li>
-						</a>
-						<a href="./Relax.html">
-							<li>Relax&Service</li>
-						</a>
-						<a href="./Logcabin.html">
-							<li>Logcabin</li>
-						</a>
-						<a href="./Booking.html">
-							<li>booking</li>
-						</a>
-					</ul>
-				</nav>
-			</div>
-			<div class="clear"></div>
-		</div>
-	</div>
+	<div class="header">
+        <nav>
+            <div class="header-bg"></div>
+            <div class="header-logo">
+                <img src="./assets/logo87.svg" alt="" width="146" height="80" />
+            </div>
+
+            <ul class="header-list">
+                <a href="./index.html">
+                    <li>Introduction</li>
+                </a>
+                <a href="./Foodie-time.html">
+                    <li>Foodie-Time</li>
+                </a>
+                <a href="./Campaign.html">
+                    <li>Campaign</li>
+                </a>
+                <a href="./Relax.html">
+                    <li>Relax&Service</li>
+                </a>
+                <a href="./Logcabin.html">
+                    <li>Logcabin</li>
+                </a>
+                <a href="./Booking.html">
+                    <li>booking</li>
+                </a>
+            </ul>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
+    </div>
+
 	<!-- 榛果Top -->
 	<div class="relax-top"><img src="./assets/relax/榛果2.png" alt=""></div>
 
