--- a/Foodie-time.html
+++ b/Foodie-time.html
@@ -17,42 +17,45 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/e45f8b0a01.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./CSS/foodie-time.css">
+    <link rel="stylesheet" href="./CSS/header.css">
+    <script src="./JS/header.js" defer></script>
 
 </head>
 
 <body>
-
-    <div class="head">
-        <div class="head-top">
-            <div class="head-logo">
+   <div class="header">
+        <nav>
+            <div class="header-bg"></div>
+            <div class="header-logo">
                 <img src="./assets/logo87.svg" alt="" width="146" height="80" />
             </div>
-            <div class="head-list">
-                <nav>
-					<ul>
-                        <a href="./index.html">
-                            <li>Introduction</li>
-                        </a>
-						<a href="./Foodie-time.html">
-							<li>Foodie Time</li>
-						</a>
-						<a href="./Campaign.html">
-							<li>Campaign</li>
-						</a>
-						<a href="./Relax.html">
-							<li>Relax&Service</li>
-						</a>
-						<a href="./Logcabin.html">
-							<li>Logcabin</li>
-						</a>
-						<a href="./Booking.html">
-							<li>booking</li>
-						</a>
-					</ul>
-                </nav>
+
+            <ul class="header-list">
+                <a href="./index.html">
+                    <li>Introduction</li>
+                </a>
+                <a href="./Foodie-time.html">
+                    <li>Foodie-Time</li>
+                </a>
+                <a href="./Campaign.html">
+                    <li>Campaign</li>
+                </a>
+                <a href="./Relax.html">
+                    <li>Relax&Service</li>
+                </a>
+                <a href="./Logcabin.html">
+                    <li>Logcabin</li>
+                </a>
+                <a href="./Booking.html">
+                    <li>booking</li>
+                </a>
+            </ul>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
-            <div class="clear"></div>
-        </div>
+        </nav>
     </div>
 
     <div class="container-menu">
