--- a/Foodie-time.html
+++ b/Foodie-time.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="text-r">
                     <h3>優質早餐</h3>
-                    <p>在豪華露營的早晨，早餐比平時更和您可以手工製作的熱三明治，度過愉快的一天。</p>
+                    <p>在豪華渡假村的早晨,早餐一定不能錯過我們的手工三明治,因為吐司是主廚自製的生吐司,食材都是精挑細選過的,所以喜歡吃麵包的你絕對不能錯過。</p>
                 </div>
             </div>
             <!-- 早餐-2 -->
@@ -85,7 +85,7 @@
                     <p>渡假村裡還提供不一樣的早餐，滿足了一早想吃飯的心情。</p>
                 </div>
                 <div class="food-img">
-                    <img src="./assets/foodie-time/bf1.png" alt="">
+                    <img src="./assets/foodie-time/bf2.png" alt="">
                 </div>
             </div>
             <!-- 迎賓點心-3 -->
@@ -94,9 +94,10 @@
                     <img src="./assets/foodie-time/銅鑼燒.png" alt="">
                 </div>
                 <div class="text-r">
-                    <h3>迎賓小點</h3>
+                    <h3>迎賓點心</h3>
                     <p>美味的手工點心是我們為遠道而來的客人們，所準備的精緻小點;
-                        在食材的挑選使用了沖繩黑糖及日本的頂級紅豆，而奶油則選擇法國頂級奶油搭配日本熊本麵粉，這樣的精調細選的組合下做出不一樣的-手工銅鑼燒。</p>
+                        在食材的挑選使用了沖繩黑糖及日本的頂級紅豆,而奶油則選擇法國頂級奶油搭配日本熊本麵粉,這樣的精調細選的組合下做出看似平凡的_
+                        手工銅鑼燒。</p>
                 </div>
             </div>
             <!-- ghost-4 -->
@@ -108,8 +109,8 @@
             <!-- dinner-5-開胃菜  -->
             <div class="dinner">
                 <div class="text-r">
-                    <h3>開胃菜</h3>
-                    <p>飯前的風味開胃料理,xxxxxxxxxx。</p>
+                    <h3>和風開胃菜</h3>
+                    <p>主廚特製的和風開胃料理,爽口又開胃,且淋醬是自製的柚香和風醬,在這樣的組合下讓你的味蕾有不同的感受。</p>
                 </div>
                 <div class="food-img">
                     <img src="./assets/foodie-time/異國料理-開胃菜.png" alt="">
@@ -121,15 +122,15 @@
                     <img src="./assets/foodie-time/PORK.png" alt="">
                 </div>
                 <div class="text-r">
-                    <h3>風味養生鍋</h3>
-                    <p>養顏藥膳鍋,xxxxxxxx</p>
+                    <h3>養顏藥膳鍋</h3>
+                    <p>渡假村晚上溫度較低,主廚提供養顏藥膳鍋,讓您感受到我們的用心及溫暖。</p>
                 </div>
             </div>
             <!-- dinner-7-頓飯  -->
             <div class="dinner">
                 <div class="text-r">
-                    <h3>風味頓飯</h3>
-                    <p>想吃飯?但又想吃點不一樣的,那絕對不能錯過我們的風味頓飯。</p>
+                    <h3>異國海鮮頓飯</h3>
+                    <p>這道料理,不是一般的西班牙海鮮燉飯,是將西式頓飯及中式燴飯所改良的燉飯,只有在這裡才能品嘗到,所以絕對要品嘗看看。</p>
                 </div>
                 <div class="food-img">
                     <img src="./assets/foodie-time/異國晚餐.png" alt="">
